# chatproto

./: README.md  pyproject.toml
.github/workflows/: dev.yml  release.yml
chatproto/: hf_apply.py  registry.py
chatproto/conversation/: history.py  settings.py
chatproto/conversation/models/: airoboros.py  alpaca.py  aquila.py  baichuan.py  baichuan2.py  baize.py  bard.py  billa.py  chatglm.py  chatgpt.py  claude.py  cutegpt.py  deepseek.py  dolly.py  dolphin.py  falcon.py  firefly.py  gemma.py  h2ogpt.py  internlm.py  koala.py  llama.py  mistral.py  mpt.py  ningyu.py  oasst_pythia.py  one_shot.py  openbuddy.py  phi.py  phoenix.py  qwen.py  redpajama.py  rwkv.py  stablelm.py  starchat.py  tigerbot.py  vicuna.py  wizardlm.py  xgen.py  xverse.py  (+3 more)
tests/: test_baichuan.py  test_baichuan2.py  test_chatglm.py  test_chatglm2.py  test_chatgpt.py  test_get_conv_settings.py  test_llama.py  test_openbuddy.py  test_qwen.py  test_starchat.py  test_zephyr.py
