[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "chatproto"
version = "0.0.2"
description = "Large language model chat protocol."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]
dependencies = [
    "numpy", "pydantic", "rich>=10.0.0", "shortuuid"
]

[project.optional-dependencies]
dev = ["black==23.3.0", "pylint==3.1.0"]

[project.urls]
"Homepage" = "https://github.com/vtuber-plan/chatproto"
"Bug Tracker" = "https://github.com/vtuber-plan/chatproto/issues"

[tool.setuptools.packages.find]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]

[tool.wheel]
exclude = ["assets*", "benchmark*", "docs", "dist*", "playground*", "scripts*", "tests*"]
